# wbh-chatdoc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc  Dockerfile  Dockerfile.web  README.md  compose.yaml  compose.yml  docker-compose.yaml  justfile  nginx.conf  pyproject.toml  rxconfig.py
.github/workflows/: pr.yaml  release.yaml
assets/locales/de/: translation.json
assets/locales/en/: translation.json
chatdoc/: chatdoc.py  constants.py
chatdoc/components/: __init__.py  chat.py  common.py  docs.py  login.py  modal.py  navbar.py
chatdoc/state/: __init__.py  auth.py  db.py  models.py  sigletons.py  state.py
test/: chat-based_document_interaction.feature  chat_history.feature  document_management_menu.feature  document_upload.feature  login.feature  menu.feature  role-based_document_management.feature
test/steps/: chat_history.py  chat_interaction.py  document_management.py  login.py  menu.py  user.py
