[tool.poetry]
name = "chatdoc"
version = "0.1.0"
description = "Chatbot using RAG architecture to answer document related questions"
authors = ["Jan Zimmermann <jzmrn@gmx.de>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
msal = "^1.31.0"
reflex = "^0.6.2.post1"
openai = "^1.51.2"
pinecone = "^5.3.1"
langchain-pinecone = "^0.2.0"
langchain-community = "^0.3.2"
unstructured = {extras = ["pdf"], version = "^0.15.14"}
torch = "2.2.2"
langchain-openai = "^0.2.2"
reflex-chakra = "^0.6.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]